--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A London based web developer with a focus on building beautiful front-ends"
+      content="SODAA innit"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
-    <title>Hari Chauhan - Software Engineer</title>
+    <title>SODAABABY</title>
     <meta name="description" content="A London based web developer with a focus on building beautiful front-ends">
 
     <!-- Facebook Meta Tags -->
