more metadata updates

--- a/public/index.html
+++ b/public/index.html
@@ -26,29 +26,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
     <title>SODAABABY</title>
-    <meta name="description" content="A London based web developer with a focus on building beautiful front-ends">
+    <meta name="description" content="blahhhh">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://haric.dev/">
+    <meta property="og:url" content="https://sodaa.org">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Hari Chauhan ">
-    <meta property="og:description" content="A London based web developer with a focus on building beautiful front-ends">
-    <meta property="og:image" content="https://haric.dev/meta.png">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="haric.dev">
-    <meta property="twitter:url" content="https://haric.dev/">
-    <meta name="twitter:title" content="Hari Chauhan ">
-    <meta name="twitter:description" content="A London based web developer with a focus on building beautiful front-ends">
-    <meta name="twitter:image" content="https://haric.dev/meta.png">
-
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-STGKDFVBY6');
-    </script>
+    <meta property="og:title" content="SODAABABY">
     
   </head>
   <body>
