--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700&family=Lato:wght@300;400&display=swap" rel="stylesheet">
-    <title>SODAABABY</title>
+    <title>SODAA</title>
     <meta name="description" content="blahhhh">
 
     <!-- Facebook Meta Tags -->
